RESOLVED FIXED128210
Handling of opaque roots is wrong in EdenCollections
https://bugs.webkit.org/show_bug.cgi?id=128210
Summary Handling of opaque roots is wrong in EdenCollections
Mark Hahnenberg
Reported 2014-02-04 14:53:02 PST
The set of opaque roots is always cleared during each collection. We should instead persist the set of opaque roots across EdenCollections and only clear it at the beginning of FullCollections.
Attachments
patch (187.68 KB, text/plain)
2014-02-04 17:16 PST, Blaze Burg
no flags
Patch (13.24 KB, patch)
2014-02-05 18:08 PST, Mark Hahnenberg
no flags
Patch (13.24 KB, patch)
2014-02-05 18:17 PST, Mark Hahnenberg
no flags
Patch (2.66 KB, patch)
2014-02-07 12:58 PST, Mark Hahnenberg
no flags
Blaze Burg
Comment 1 2014-02-04 17:16:36 PST
WebKit Commit Bot
Comment 2 2014-02-04 17:18:16 PST
Attachment 223184 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/replay/scripts/tests/expected/generate-enum-encoding-helpers-with-guarded-values.json-TestReplayInputs.h:67: The parameter name "button" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py:95: whitespace before '}' [pep8/E202] [5] ERROR: Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py:101: whitespace before '}' [pep8/E202] [5] ERROR: Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py:141: whitespace before '}' [pep8/E202] [5] ERROR: Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py:538: whitespace before ']' [pep8/E202] [5] ERROR: Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py:687: whitespace before ']' [pep8/E202] [5] ERROR: Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py:823: whitespace before '}' [pep8/E202] [5] ERROR: Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py:833: whitespace before '}' [pep8/E202] [5] ERROR: Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py:841: whitespace before '}' [pep8/E202] [5] ERROR: Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py:865: whitespace before ']' [pep8/E202] [5] ERROR: Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py:886: whitespace before ']' [pep8/E202] [5] ERROR: Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py:973: whitespace before '}' [pep8/E202] [5] ERROR: Source/JavaScriptCore/replay/scripts/tests/expected/generate-enum-encoding-helpers.json-TestReplayInputs.h:80: The parameter name "button" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 13 in 61 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Hahnenberg
Comment 3 2014-02-04 17:18:51 PST
(In reply to comment #1) > Created an attachment (id=223184) [details] > patch I think this is the wrong bug :-)
Blaze Burg
Comment 4 2014-02-04 17:21:12 PST
Comment on attachment 223184 [details] patch Wrong bugzilla bug. :|
Mark Hahnenberg
Comment 5 2014-02-05 18:08:11 PST
Mark Hahnenberg
Comment 6 2014-02-05 18:17:24 PST
WebKit Commit Bot
Comment 7 2014-02-05 19:33:28 PST
Comment on attachment 223286 [details] Patch Clearing flags on attachment: 223286 Committed r163507: <http://trac.webkit.org/changeset/163507>
WebKit Commit Bot
Comment 8 2014-02-05 19:33:30 PST
All reviewed patches have been landed. Closing bug.
Mark Hahnenberg
Comment 9 2014-02-07 12:03:58 PST
D'oh! I forgot to check in the tests.
Mark Hahnenberg
Comment 10 2014-02-07 12:58:16 PST
Geoffrey Garen
Comment 11 2014-02-07 13:52:40 PST
Comment on attachment 223486 [details] Patch r=me
WebKit Commit Bot
Comment 12 2014-02-10 11:54:17 PST
Comment on attachment 223486 [details] Patch Clearing flags on attachment: 223486 Committed r163806: <http://trac.webkit.org/changeset/163806>
WebKit Commit Bot
Comment 13 2014-02-10 11:54:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.