Source/JavaScriptCore/heap/Heap.h
@@ -148,7 +148,8 @@ namespace JSC {
         JS_EXPORT_PRIVATE void collectAllGarbage();
         bool shouldCollect();
         void gcTimerDidFire() { m_shouldDoFullCollection = true; }
-        void collect();
+        void setShouldDoFullCollection(bool shouldDoFullCollection) { m_shouldDoFullCollection = shouldDoFullCollection; }
+        JS_EXPORT_PRIVATE void collect();
         bool collectIfNecessaryOrDefer(); // Returns true if it did collect.
 
         void reportExtraMemoryCost(size_t cost);
